Menuális teszt és javítások

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
         </div>
     </nav>
 
-    <div class="container mt-5">
+    <div class="container mt-3">
         <div class="row justify-content-center">
             <div class="col-md-6 p-sm-5 bg-light rounded-3">
                 <h2>Bejelentkezés</h2>
@@ -38,6 +38,7 @@
                     <button type="submit" class="btn btn-primary">Bejelentkezés</button>
                 </form>
                 <p class="mt-3">Nincs még fiókod? <a href="/register.html">Regisztrálj!</a></p>
+                <p class="mt-3">Még nem használtad az alkalmazást? <a href="/help.html" target="_blank">Nézd meg az útmutatót!</a></p>
             </div>
         </div>
     </div>
