--- a/public/add_movie.html
+++ b/public/add_movie.html
@@ -2,6 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Új film hozzáadása - Filmnapló</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -29,27 +30,27 @@
                 <h2>Új film hozzáadása</h2>
                 <form id="addMovieForm">
                     <div class="mb-3">
-                        <label for="cim" class="form-label">Film címe <span class="text-danger">*</span></label>
+                        <label for="cim" class="form-label">Film címe: <span class="text-danger">*</span></label>
                         <input type="text" class="form-control" id="cim" name="cim" required>
                     </div>
                     <div class="mb-3">
-                        <label for="ev" class="form-label">Megjelenési éve</label>
+                        <label for="ev" class="form-label">Megjelenési éve:</label>
                         <input type="number" class="form-control" id="ev" name="ev" min="1888" max="2100">
                     </div>
                     <div class="mb-3">
-                        <label for="szereplo" class="form-label">Szereplő(k)</label>
+                        <label for="szereplo" class="form-label">Szereplő(k):</label>
                         <input type="text" class="form-control" id="szereplo" name="szereplo">
                     </div>
                     <div class="mb-3">
-                        <label for="ertekeles" class="form-label">Személyes értékelés (1-5)</label>
+                        <label for="ertekeles" class="form-label">Személyes értékelés (1-5):</label>
                         <input type="number" class="form-control" id="ertekeles" name="ertekeles" min="1" max="5">
                     </div>
                     <div class="mb-3">
-                        <label for="velemeny" class="form-label">Rövid személyes jegyzet/vélemény</label>
+                        <label for="velemeny" class="form-label">Rövid jegyzet/vélemény:</label>
                         <textarea class="form-control" id="velemeny" name="velemeny" rows="3"></textarea>
                     </div>
                     <div class="mb-3">
-                        <label for="megnezve" class="form-label">Megnézés dátuma</label>
+                        <label for="megnezve" class="form-label">Megnézés dátuma:</label>
                         <input type="date" class="form-control" id="megnezve" name="megnezve">
                         <div class="form-text">Hagyd üresen, ha még nem nézted meg.</div>
                     </div>
