--- a/public/movies.html
+++ b/public/movies.html
@@ -2,6 +2,7 @@
 <html lang="hu">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="/favicon.png" type="image/png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Filmnaplóm - Filmnapló</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -24,9 +25,15 @@
     </nav>
 
     <div class="container mt-3 p-5 bg-light rounded-3">
-        <div class="d-flex justify-content-between align-items-center mb-3">
-            <h2 id="moviesTitle">Filmlista</h2>
-            <a href="/add_movie.html" class="btn btn-success">Új film hozzáadása</a>
+        <div class="row mb-3">
+            <div class="col-md-4">
+                <h2 id="moviesTitle">Filmlista</h2>
+            </div>
+            <div class="col-md-4">
+            </div>
+            <div class="col-md-4">
+                <a href="/add_movie.html" class="btn btn-success w-100">Új film hozzáadása</a>
+            </div>
         </div>
 
         <div class="row mb-3">
@@ -54,7 +61,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Film Cím (Év)</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Szereplő: Szereplő Neve</h6>
+                        <h6 class="card-subtitle mb-2 text-muted">Szereplő(k): Szereplő neve</h6>
                         <p class="card-text">Értékelés: X/5</p>
                         <p class="card-text">Vélemény: Rövid vélemény...</p>
                         <p class="card-text"><small class="text-muted">Megnézve: DÁTUM, Hol: HELYSZÍN</small></p>
