--- a/public/add_movie.html
+++ b/public/add_movie.html
@@ -31,7 +31,7 @@
                 <form id="addMovieForm">
                     <div class="mb-3">
                         <label for="cim" class="form-label">Film címe: <span class="text-danger">*</span></label>
-                        <input type="text" class="form-control" id="cim" name="cim" required>
+                        <input type="text" class="form-control" id="cim" name="cim" required autofocus>
                     </div>
                     <div class="mb-3">
                         <label for="ev" class="form-label">Megjelenési éve:</label>
