--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                 <form id="loginForm">
                     <div class="mb-3">
                         <label for="username" class="form-label">Felhasználónév:</label>
-                        <input type="text" class="form-control" id="username" name="username" required>
+                        <input type="text" class="form-control" id="username" name="username" required autofocus>
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Jelszó:</label>
