--- a/public/register.html
+++ b/public/register.html
@@ -30,7 +30,7 @@
                 <form id="registrationForm">
                     <div class="mb-3">
                         <label for="username" class="form-label">Felhasználónév:</label>
-                        <input type="text" class="form-control" id="username" name="username" required minlength="3">
+                        <input type="text" class="form-control" id="username" name="username" required minlength="3" autofocus>
                         <div class="form-text">Legalább 3 karakter.</div>
                     </div>
                     <div class="mb-3">
